<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nil.error.korsa.Acitivity.OfferRIde">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/sourceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text=" "/>

        <AutoCompleteTextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/autocomplete_margin"
            android:layout_marginRight="@dimen/autocomplete_margin"
            android:background="@drawable/edittextfield"
            android:hint="@string/source"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:id="@+id/DestinationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text=" "/>

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/autocomplete_margin"
            android:layout_marginRight="@dimen/autocomplete_margin"
            android:alpha="0.9"
            android:background="@drawable/edittextfield"
            android:ems="10"
            android:hint="@string/destination"
            android:inputType="text"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/DateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text=" " />

            <AutoCompleteTextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/autocomplete_margin"
                android:alpha="0.9"
                android:background="@drawable/edittextfield"
                android:ems="10"
                android:hint="@string/startDate"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/TimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text=" "/>

            <AutoCompleteTextView
                android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                android:layout_marginRight="@dimen/autocomplete_margin"
                android:alpha="0.9"
                android:background="@drawable/edittextfield"
                    android:ems="10"
                    android:hint="@string/startTime"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/SeatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text=" "/>

            <AutoCompleteTextView
                android:id="@+id/seatsVacant"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/autocomplete_margin"
                android:layout_marginRight="@dimen/autocomplete_margin"
                android:alpha="0.9"
                android:background="@drawable/edittextfield"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/seatsVacant"
                android:inputType="number"
                android:singleLine="true" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="Preferred Gender : "/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">
                    <CheckBox
                        android:id="@+id/gendermale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"/>
                    <CheckBox
                        android:id="@+id/genderfemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"/>
                    <CheckBox
                        android:id="@+id/genderother"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other"/>
                </LinearLayout>

        </LinearLayout>
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/en_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:textColor="@drawable/buttontext"
                android:text="View Route" />

        <Button
            android:id="@+id/submit_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:textColor="@drawable/buttontext"
            android:text="Publish Ride"/>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>
